--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Swish League </title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 </head>
 
 <body>
