Teams index Page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="brand">
       <div class="logo">
         <a href="">
-          <img src="img/logo.png" alt="">
+          <img src="img/B5FA4883-small.png" alt="">
         </a>
       </div>
       <div class="burger">
@@ -39,7 +39,7 @@
       <a href="">About</a>
       <a href="">Store</a>
       <a href="">TV</a>
-      <a href="">Teams</a>
+      <a href="teams/index.html">Teams</a>
       <a href="">Fixtures</a>
       <a href="">Blog</a>
     </div>
@@ -71,8 +71,110 @@
   <!-- End of hero section  -->
 
   <!-- Latest News Section -->
+  <section class="latest-news">
+    <h2>Latest News</h2>
+    <div class="news">
+      <div class="top-news">
+
+        <div alt="" class="top-news-img">
+          <img src="img/lebron james.jpg" alt="">
+        </div>
+        <!-- End of top image news section  -->
+
+        <div class="top-news-details">
+          <div class="title">
+            Lebron James
+          </div>
+
+          <div class="news-summary">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur nihil necessitatibus quis eos adipisci quidem distinctio ipsum dignissimos reprehenderit veritatis. Velit aperiam cupiditate ratione earum quaerat laboriosam fugiat repellendus minima?
+          </div>
+          <div class="date">
+            Today
+          </div>
+        </div>
+        <!-- end of top new details -->
+      </div>
+      <!-- End of top news section  -->
+
+      <div class="other-news">
+        <div class="new-news">
+          <div class="news-img">
+            <img src="img/lebron james.jpg" alt="">
+          </div>
+          <!-- Emd of div Image -->
+          <div class="title">Lebron James</div>
+          <!-- End of title -->
+          <div class="summary">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam at facilis nemo exercitationem et voluptate repellendus fugit tempore dolorum, perferendis, quaerat vero cumque voluptatum fugiat dolore, aliquid voluptates! Numquam, quasi.
+          </div>
+          <!-- End of suammry -->
+          <div class="date">Yesterday</div>
+          <!-- End of date -->
+        </div>
+        <!-- End of news -->
+
+        <div class="new-news">
+          <div class="news-img">
+            <img src="img/lebron james.jpg" alt="">
+          </div>
+          <!-- Emd of div Image -->
+          <div class="title">Lebron James</div>
+          <!-- End of title -->
+          <div class="summary">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam at facilis nemo exercitationem et voluptate repellendus fugit tempore dolorum, perferendis, quaerat vero cumque voluptatum fugiat dolore, aliquid voluptates! Numquam, quasi.
+          </div>
+          <!-- End of suammry -->
+          <div class="date">Yesterday</div>
+          <!-- End of date -->
+        </div>
+        <!-- End of news -->
+
+        <div class="new-news">
+          <div class="news-img">
+            <img src="img/lebron james.jpg" alt="">
+          </div>
+          <!-- Emd of div Image -->
+          <div class="title">Lebron James</div>
+          <!-- End of title -->
+          <div class="summary">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam at facilis nemo exercitationem et voluptate repellendus fugit tempore dolorum, perferendis, quaerat vero cumque voluptatum fugiat dolore, aliquid voluptates! Numquam, quasi.
+          </div>
+          <!-- End of suammry -->
+          <div class="date">Yesterday</div>
+          <!-- End of date -->
+        </div>
+        <!-- End of news -->
+
+        <div class="new-news">
+          <div class="news-img">
+            <img src="img/lebron james.jpg" alt="">
+          </div>
+          <!-- Emd of div Image -->
+          <div class="title">Lebron James</div>
+          <!-- End of title -->
+          <div class="summary">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam at facilis nemo exercitationem et voluptate repellendus fugit tempore dolorum, perferendis, quaerat vero cumque voluptatum fugiat dolore, aliquid voluptates! Numquam, quasi.
+          </div>
+          <!-- End of suammry -->
+          <div class="date">Yesterday</div>
+          <!-- End of date -->
+        </div>
+        <!-- End of news -->
+
+
+      </div>
+      <!-- End of other news section  -->
+    </div>
+    <!--End of news Section-->
+  </section>
   <!-- Latest News Section-->
 
+  <!-- Latest Merch -->
+  <section class="merch-section">
+
+  </section>
+  <!-- Latest Merch -->
 
 
   <!-- Footer -->
